# Hemion

./: .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  Dioxus.toml.web  README.md  SECURITY.md  TICKETS.md  clippy.toml  package-lock.json  start.sh  stop.sh
.cargo/: config.toml
.diewan/: parwana-contract.toml
.github/workflows/: build-parity.yml  contract-pin.yml
assets/: tailwind.css
docs/accessibility/: hemion-contrast-matrix.md
docs/visual-regression/: README.md
public/: style.css  tailwind.css
src/: layout.rs  main.rs  routes.rs  storage.rs  ui_error.rs
src/assets/: details.rs  mod.rs  tracker.rs
src/chains/: aptos.rs  bitcoin.rs  ethereum.rs  mod.rs  solana.rs  sui.rs
src/components/: chain_display.rs  design_tokens.rs  dropdown.rs  finality_lanes.rs  header.rs  inspector.rs  mod.rs  onboarding.rs  proof_view.rs  review.rs  seal_status.rs  seal_view.rs  sidebar.rs
src/context/: mod.rs  state.rs  types.rs  utils.rs  view_models.rs  wallet.rs
src/core/: encryption.rs  key_manager.rs  mod.rs  native_keystore.rs  seal_storage.rs  storage.rs  wallet.rs
src/hooks/: mod.rs  use_assets.rs  use_balance.rs  use_network.rs  use_wallet.rs  use_wallet_connection.rs
src/pages/: anchoring.rs  assurance_inspector.rs  bundle_verify.rs  console.rs  dispute_inspector.rs  entity_profile.rs  explorer.rs  fixture_lab.rs  mod.rs  nft_page.rs  object_inspector.rs  object_page.rs  piteka_environment.rs  portfolio_home.rs  redirect.rs  search.rs  tuppira_explorer.rs  wallet_page.rs
src/pages/accounts/: mod.rs  transactions.rs
src/pages/common/: mod.rs
src/pages/cross_chain/: detail.rs  list.rs  retry.rs  status.rs  transfer.rs
src/pages/proofs/: bundle.rs  generate.rs  list.rs  mod.rs  verify.rs  verify_cross_chain.rs
src/pages/sanads/: consume.rs  create.rs  journey.rs  list.rs  show.rs  transfer.rs
src/pages/seals/: consume.rs  create.rs  list.rs  mod.rs  registry.rs  verify.rs
src/pages/settings/: mod.rs  page.rs
src/pages/transactions/: card.rs  detail.rs  list.rs
src/pages/validate/: commitment_chain.rs  consignment.rs  list.rs  mod.rs  offline.rs  proof.rs  seal.rs
src/pages/zk_proofs/: generate.rs  mod.rs  verify.rs
src/services/: anchoring.rs  application_contract.rs  asset_service.rs  blockchain.rs  bundle_verifier.rs  chain_api.rs  explorer.rs  fixture_lab.rs  http.rs  lineage.rs  mod.rs  network.rs  object_model.rs  observation.rs  piteka.rs  platform.rs  portfolio.rs  responsibility.rs  rpc_settings.rs  search.rs  subscription.rs  transfer_authority.rs  tuppira.rs
src/wallet/: account.rs  context.rs  data.rs  hd.rs  metadata.rs  storage.rs
tests/: application_conformance.rs  architecture_boundaries.rs  console_shell.rs
